# RobotFramework-n00b

./: FirstTest.robot  Requirements.txt  log.html  output.xml  playwright-log.txt  pyproject.toml  readme.md  report.html
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
