[tool.poetry]
name = "robotframework-n00b"
version = "0.1.0"
description = "My first Package"
authors = ["Wilco"]
readme = "README.md"
packages = [{include = "robotframework_n00b"}]

[tool.poetry.dependencies]
python = "^3.11"
robotframework = "^6.0.2"
robotframework-browser = "^15.1.0"
robotframework-requests = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
